--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "react-player": "^2.9.0",
+    "react-scroll-up": "^1.3.7",
+    "react-scroll-up-button": "^1.6.4",
     "validator": "^13.7.0"
   },
   "devDependencies": {
