--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/JD-Fermin/GameDart/issues"
   },
-  "homepage": "https://github.com/JD-Fermin/GameDart#readme",
+  "homepage": "https://gamedart.herokuapp.com/#/",
   "dependencies": {
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
