--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "mern project",
   "main": "app.js",
   "scripts": {
+    "server:debug": "nodemon --inspect app.js",
     "start": "node app.js",
     "server": "nodemon app.js",
     "frontend-install": "npm install --prefix frontend",
